--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CrossfadeApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.ZabbixApp" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#9C1F4A</item>
         <item name="colorPrimaryVariant">#000000</item>
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">20sp</item>
+
 
     </style>
 </resources>
