--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <WebView
+    <com.euphoriacode.zabbixapp.CustomWebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,8 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-    </WebView>
+    </com.euphoriacode.zabbixapp.CustomWebView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -34,7 +33,8 @@
             android:clickable="true"
             app:backgroundTint="#C61616"
             app:srcCompat="@drawable/ic_change_circle"
-            tools:ignore="SpeakableTextPresentCheck" />
+            tools:ignore="SpeakableTextPresentCheck"
+            android:contentDescription="replace url" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_refresh"
@@ -45,7 +45,8 @@
             android:clickable="true"
             app:backgroundTint="#C61616"
             app:srcCompat="@drawable/ic_baseline_refresh_24"
-            tools:ignore="SpeakableTextPresentCheck" />
+            tools:ignore="SpeakableTextPresentCheck"
+            android:contentDescription="refresh web" />
     </LinearLayout>
 
 </FrameLayout>
