--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -14,8 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </com.euphoriacode.zabbixapp.CustomWebView>
+        app:layout_constraintTop_toTopOf="parent"></com.euphoriacode.zabbixapp.CustomWebView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -32,7 +31,7 @@
             android:backgroundTintMode="add"
             android:clickable="true"
             app:backgroundTint="#C61616"
-            app:srcCompat="@drawable/ic_change_circle"
+            app:srcCompat="@drawable/ic_change"
             tools:ignore="SpeakableTextPresentCheck"
             android:contentDescription="replace url" />
 
@@ -44,7 +43,7 @@
             android:backgroundTintMode="add"
             android:clickable="true"
             app:backgroundTint="#C61616"
-            app:srcCompat="@drawable/ic_baseline_refresh_24"
+            app:srcCompat="@drawable/ic_refresh"
             tools:ignore="SpeakableTextPresentCheck"
             android:contentDescription="refresh web" />
     </LinearLayout>
