--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
@@ -8,9 +7,16 @@
         android:orderInCategory="1"
         />
     <item
-        android:id="@+id/exit"
-        android:icon="@drawable/ic_exit_to_app"
-        android:title="Exit"
+        android:id="@+id/menu_pc_version"
+        android:title="PC Version"
+        android:checkable="true"
+        app:actionViewClass="android.widget.CheckBox"
         android:orderInCategory="2"
+        />
+    <item
+        android:id="@+id/menu_exit"
+        android:icon="@drawable/ic_exit"
+        android:title="Exit"
+        android:orderInCategory="3"
         />
 </menu>
