--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -5,16 +5,16 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
-    <com.euphoriacode.zabbixapp.CustomWebView
+    <com.euphoriacode.zabbixapp.castomclass.CustomWebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></com.euphoriacode.zabbixapp.CustomWebView>
+        app:layout_constraintTop_toTopOf="parent"></com.euphoriacode.zabbixapp.castomclass.CustomWebView>
 
     <LinearLayout
         android:layout_width="wrap_content"
